--- a/app/views/reu_program/applications/_csv_modal.haml
+++ b/app/views/reu_program/applications/_csv_modal.haml
@@ -8,8 +8,8 @@
           %button.close(aria-label="Close" data-dismiss="modal" type="button")
             %span(aria-hidden="true") ×
         .modal-body
-          - @form = ApplicationForm.active
-          - @form.sections.each do |section|
+          - form = ApplicationForm.active
+          - form.sections.each do |section|
             .row.border-bottom.mt-2
               .col
                 %p
@@ -18,8 +18,21 @@
                 - section.fields.each do |field|
                   .form-group.form-check.mb-0
                     - name = "csv_fields[#{section.id}][]"
-                    = check_box_tag name, field.id, true, class: 'form-check-input'
-                    = label_tag name, field.title
+                    - id = "csv_fields_#{section.id}_field_#{field.id}"
+                    = check_box_tag name, field.id, true, class: 'form-check-input', id: id
+                    = label_tag id, field.title
+          - section = RecommenderForm.active.recommender_section
+          .row.border-bottom.mt-2
+            .col
+              %p
+                %strong Recommenders
+            .col
+              - section.fields.each do |field|
+                .form-group.form-check.mb-0
+                  - name = "csv_fields[#{section.id}][]"
+                  - id = "csv_fields_#{section.id}_field_#{field.id}"
+                  = check_box_tag name, field.id, true, class: 'form-check-input', id: id
+                  = label_tag id, field.title
 
         .modal-footer
           %button.btn.btn-secondary(data-dismiss="modal" type="button") Close
